# dex

./: .gitignore  00_NOTE_TO_SELF  AUTHORS  COPYRIGHT  LICENSE
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/common/: common.rs  common_dashboard.rs  mod.rs
src/tabs/: dashboard.css  dashboard.html  packages.html  scripts.html  services.css  settings.css  settings.html  system.css  system.html
src/tabs/dashboard/: dashboard.css  dashboard.html  dashboard.js
src/tabs/scripts/: scripts.css
src/tabs/services/: services.html
