[package]
name = "dex"
version = "0.2.0-alpha.1"
description = "Decomplexified Execution (DEX) is a tool for managing complex workflows across major Linux distributions under one unified interface."
authors = ["John Rey Basilio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5.60", features = ["derive"] }
sysinfo = { version = "0.38.4", features = ["disk"] }

